// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Settings /> should render when [props.loading=false] 1`] = `
<div
  className="container-noside"
>
  <ViewHeader
    title="Administration"
  >
    <strong>
      Administration
    </strong>
  </ViewHeader>
  <Tabs
    bsStyle="tabs"
  >
    <TabLink
      to="/administration/settings"
    >
      Settings
    </TabLink>
    <TabLink
      to="/administration/users"
    >
      Users
    </TabLink>
    <TabLink
      to="/administration/updates"
    >
      Updates
    </TabLink>
  </Tabs>
  <Switch>
    <Redirect
      exact={true}
      from="/administration"
      to="/administration/settings"
    />
    <Route
      component={[Function]}
      path="/administration/settings"
    />
    <Route
      component={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(ManageUsers)",
          "type": [Function],
        }
      }
      exact={true}
      path="/administration/users"
    />
    <Route
      component={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(SoftwareUpdateViewer)",
          "type": [Function],
        }
      }
      path="/administration/updates"
    />
    <Route
      component={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "displayName": "Connect(UserItem)",
          "type": [Function],
        }
      }
      path="/administration/users/:userId"
    />
  </Switch>
</div>
`;

exports[`<Settings /> should render when [props.loading=true] 1`] = `
<div
  className="container-noside"
>
  <ViewHeader
    title="Administration"
  >
    <strong>
      Administration
    </strong>
  </ViewHeader>
  <Tabs
    bsStyle="tabs"
  >
    <TabLink
      to="/administration/settings"
    >
      Settings
    </TabLink>
    <TabLink
      to="/administration/users"
    >
      Users
    </TabLink>
    <TabLink
      to="/administration/updates"
    >
      Updates
    </TabLink>
  </Tabs>
  <LoadingPlaceholder />
</div>
`;
